--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -1,30 +1,125 @@
-# Data Science Tools and Ecosystem
-
-In this notebook, Data Science Tools and Ecosystem are summarized.
-Objectives:
-- List popular languages for Data Science
-- List popular Data Science Tools
-- List commonly used libraries used by Data Scienctists 
-Some of the popular languages that Data Scientists use are:
-
-1. R
-2. Python
-3. Julia
-Some of the commonly used libraries used by Data Scientists include:
-1. NumPy
-2. Pandas
-3. Matplotlib
-4. Seaborn
-| Data Science Tools    |
-|-----------------------|
-| Jupyter Notebook      |
-| RStudio               |
-| Spyder                |
-
-### Below are a few examples of evaluating arithmetic expressions in Python
-# This a simple arithmetic expression to mutiply then add integers
-(3*4)+5
-#This will convert 200 minutes to hours by diving by 60
-200/60
-## Author
-Konstantin Leberfinger
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Science Tools and Ecosystem\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook, Data Science Tools and Ecosystem are summarized."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Objectives:\n",
+    "- List popular languages for Data Science\n",
+    "- List popular Data Science Tools\n",
+    "- List commonly used libraries used by Data Scienctists "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the popular languages that Data Scientists use are:\n",
+    "\n",
+    "1. R\n",
+    "2. Python\n",
+    "3. Julia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the commonly used libraries used by Data Scientists include:\n",
+    "1. NumPy\n",
+    "2. Pandas\n",
+    "3. Matplotlib\n",
+    "4. Seaborn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Data Science Tools    |\n",
+    "|-----------------------|\n",
+    "| Jupyter Notebook      |\n",
+    "| RStudio               |\n",
+    "| Spyder                |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Below are a few examples of evaluating arithmetic expressions in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This a simple arithmetic expression to mutiply then add integers\n",
+    "(3*4)+5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3333333333333335"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#This will convert 200 minutes to hours by diving by 60\n",
+    "200/60"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Author\n",
+    "Konstantin Leberfinger\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
